fixing list view on mobile css

--- a/app/assets/stylesheets/residential_listing.scss
+++ b/app/assets/stylesheets/residential_listing.scss
@@ -194,17 +194,17 @@
   margin: 0px !important;
 }
 .col-image {
-  padding: 15;
-  order: 1;
-  // width: 100px;
-  width: 30vw;
-  flex: 1;
+  // padding: 15;
+  // order: 1;
+  // // width: 100px;
+  // width: 30;
+  // flex: 1;
 }
 
 .col-info {
-  order: 2;
-  margin-left: 15px;
-  flex-grow: 2;
+  // order: 2;
+  // margin-left: 15px;
+  // flex-grow: 2;
 }
 
 .even {
